// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`next to jump should render correctly 1`] = `
<NextToJumpContainer>
  <div
    className="next2Jump"
  >
    <div>
      <label>
        Next to Jump
      </label>
    </div>
    <div
      className="events"
    >
      <event
        event={
          Object {
            "EventId": 11111,
            "EventName": "first fetch result",
          }
        }
        key="event-undefined"
      />
    </div>
  </div>
</NextToJumpContainer>
`;

exports[`next to jump should render correctly 2`] = `
<NextToJumpContainer>
  <div
    className="next2Jump"
  >
    <div>
      <label>
        Next to Jump
      </label>
    </div>
    <div
      className="events"
    >
      <event
        event={
          Object {
            "EventId": 22222,
            "EventName": "second fetch result",
          }
        }
        key="event-undefined"
      />
    </div>
  </div>
</NextToJumpContainer>
`;
